# CrewAI-NotebookLM-Clone-Demo

./: README.md  essay.md  pyproject.toml
output/: script.json
src/crewai_notebooklm_clone/: crew.py  main.py
src/crewai_notebooklm_clone/config/: agents.yaml  tasks.yaml
src/crewai_notebooklm_clone/tools/: custom_tool.py
